--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,6 +5,7 @@
     <label>@PLUGIN_KEY@</label>
     <description>Python custom step</description>
     <category>Scripting/Shell</category>
+    <ecSupportLevel>10</ecSupportLevel>
     <author>Electric Cloud</author>
     <authorUrl>http://www.electric-cloud.com/support</authorUrl>
     <commander-version min="3.6"/>
