--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,7 +5,6 @@
     <label>@PLUGIN_KEY@</label>
     <description>Python custom step</description>
     <category>Scripting/Shell</category>
-    <ecSupportLevel>10</ecSupportLevel>
     <author>Electric Cloud</author>
     <authorUrl>http://www.electric-cloud.com/support</authorUrl>
     <commander-version min="3.6"/>
@@ -15,4 +14,5 @@
             <javascript>war/com.electriccloud.commander.plugins.EC_Python.Configure/com.electriccloud.commander.plugins.EC_Python.Configure.nocache.js</javascript>
         </component>
     </components>
+    <repositoryUrl>https://github.com/electric-cloud-community/EC-Python</repositoryUrl>
 </plugin>
